--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,7 @@
-### Hugo ###
-public/
-resources
-# Don't ignore themes folder in your actual project .gitignore if using submodules!
-/themes/
-.hugo_build.lock
-# Hugo Pipes
-/assets/jsconfig.json
-hugo_stats.json
-# Hugo executable may be added to repository
-hugo.exe
-hugo.darwin
-hugo.linux
+# Ignore everything
+/*
 
-### JS ###
-/node_modules
-
-### Netlify ###
-/netlify
-
-### System
-.DS_Store
-
-### Editor
-*.code-workspace
-# Ignore all files and directories except the publishDir
-*
+# Include the docs directory
 !docs/
+
+
